<resources>
    <string name="app_name">CoviDex</string>
    <string name="Welcome_Text"><u>Welcome to CoviDex !</u></string>
    <string name="Email_Hint">Email id</string>
    <string name="Password">Enter your password</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Sign_In">Sign In</string>
    <string name="Register">Register</string>
    <string name="Remember_Me">Remember me</string>
</resources>