<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:title="Log In"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_Text"
        android:textColor="@color/black"
        android:layout_below="@+id/toolbar_login"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="10dp"
        android:hint="@string/Email_Hint"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingBottom="20dp">
    </EditText>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/Forgot_Password"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/signIn"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/Sign_In"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/Register"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_below="@+id/signIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Register"
        android:textSize="20sp"/>

    <CheckBox
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Register"
        android:layout_centerHorizontal="true"
        android:text="@string/Remember_Me"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>

